# editor

./: .gitignore  Cargo.toml  Design.md  README.md
crates/editor_action/: Cargo.toml
crates/editor_action/src/: command_handler.rs  document_action_handler.rs  lib.rs
crates/editor_app/: Cargo.toml
crates/editor_app/src/: command_bar.rs  editor.rs  lib.rs
crates/editor_document/: Cargo.toml
crates/editor_document/src/: action.rs  document.rs  lib.rs  selection.rs  single_line_document.rs
crates/editor_fuzzy/: Cargo.toml
crates/editor_fuzzy/src/: lib.rs
crates/editor_input/: Cargo.toml
crates/editor_input/src/: lib.rs
crates/editor_mode/: Cargo.toml
crates/editor_mode/src/: lib.rs
crates/editor_terminal/: Cargo.toml
crates/editor_terminal/src/: lib.rs  rect.rs  slice.rs  terminal.rs  vector.rs
crates/editor_theme/: Cargo.toml
crates/editor_theme/src/: lib.rs
src/: app.rs  logger.rs  main.rs  text_editor.rs  theme.rs
